fix: image size on mobile resolution

--- a/cssMemeSlider/css/style.css
+++ b/cssMemeSlider/css/style.css
@@ -31,7 +31,6 @@ body {
 .slides-container {
   display: flex;
   width: 400%;
-  height: 80%;
   overflow: hidden;
   margin-bottom: 20px;
 }
